--- a/Docker_Env/Dockerfile
+++ b/Docker_Env/Dockerfile
@@ -44,6 +44,7 @@ RUN cd ~/.vim/bundle/coc.nvim && yarn install
 RUN cd ~/.vim/bundle/command-t; rake make 
 COPY coc-settings.json /home/$LOCAL_USER/.vim/
 RUN mkdir -p /home/$LOCAL_USER/.config/coc/
+RUN chown -R $LOCAL_USER:$LOCAL_USER /home/$LOCAL_USER/
 
 #git config set up 
 RUN git config --global core.editor vim && git config --global difftool.vdwrap.cmd 'vdwrap $LOCAL $REMOTE' && git config --global diff.tool vdwrap
