updating yarn and tmux

--- a/docker_env/Dockerfile
+++ b/docker_env/Dockerfile
@@ -3,14 +3,14 @@ ARG USER
 ARG EMAIL
 
 ### INSTALLING PACKAGES
-RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
-RUN echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-
 RUN apt-get -y update
 RUN apt-get install -y ranger sudo zsh tmux make automake ruby gcc \
                    man vim git ctags locales nodejs npm \
-                   maven wget nmap lynx cmake yarn \
+                   maven wget nmap lynx cmake curl \
                    htop golang httpie jq elinks procps groovy
+RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
+RUN echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+RUN apt-get install -y yarn
 
 ### SET THE LOCALE
 RUN locale-gen en_US.UTF-8  
