--- a/docker_env/files/tmux.conf
+++ b/docker_env/files/tmux.conf
@@ -3,9 +3,7 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 set-option -g allow-rename off
-set-option -g pane-active-border-fg green
 set-option -g history-limit 3000
-set-window-option -g window-status-current-bg green
 
 
 # use C-a, since it's on the home row and easier to hit than C-b
@@ -70,20 +68,13 @@ set-window-option -g display-panes-time 1500
 set-option -g status-interval 1
 set-option -g status-left ''
 set-option -g status-right '%l:%M%p'
-set-window-option -g window-status-current-fg magenta
+setw -g window-status-current-style fg=black,bg=white
 set-option -g status-fg default
 
 # Status Bar solarized-dark (default)
-set-option -g status-bg black
-set-option -g pane-active-border-fg yellow
-set-option -g pane-border-fg cyan
-
-# Status Bar solarized-light
-if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g status-bg white"
-if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g pane-active-border-fg white"
-if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g pane-border-fg white"
+set-option -g status-bg red
+set-option -g status-fg black
 
 # Set window notifications
 setw -g monitor-activity on
 set -g visual-activity on
-
