--- a/docker_env/files/tmux.conf
+++ b/docker_env/files/tmux.conf
@@ -19,6 +19,7 @@ bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 setw -g mode-keys vi
 
 set-option -g default-terminal screen-256color
+set -ga terminal-overrides ",*256col*:Tc"
 
 bind-key : command-prompt
 bind-key r refresh-client
